Первый рабочий вариант ПБДО1 (прошитое бинарое дерево отрезков)

--- a/SpatialIndex/SpatialIndex.vcxproj.filters
+++ b/SpatialIndex/SpatialIndex.vcxproj.filters
@@ -29,5 +29,8 @@
     <ClInclude Include="Segment.h">
       <Filter>Header Files</Filter>
     </ClInclude>
+    <ClInclude Include="TreePrinter.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
   </ItemGroup>
 </Project>
