--- a/SpatialIndex/SpatialIndex.vcxproj
+++ b/SpatialIndex/SpatialIndex.vcxproj
@@ -133,6 +133,7 @@
   <ItemGroup>
     <ClInclude Include="Node.h" />
     <ClInclude Include="Segment.h" />
+    <ClInclude Include="SegmentAssociatedList.h" />
     <ClInclude Include="TreePrinter.h" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
