--- a/SpatialIndex/SpatialIndex.vcxproj.filters
+++ b/SpatialIndex/SpatialIndex.vcxproj.filters
@@ -13,6 +13,9 @@
       <UniqueIdentifier>{67DA6AB6-F800-4c08-8B7A-83BB121AAD01}</UniqueIdentifier>
       <Extensions>rc;ico;cur;bmp;dlg;rc2;rct;bin;rgs;gif;jpg;jpeg;jpe;resx;tiff;tif;png;wav;mfcribbon-ms</Extensions>
     </Filter>
+    <Filter Include="Header Files\AVL">
+      <UniqueIdentifier>{dce5239c-beed-45bd-a2fc-407af204eedc}</UniqueIdentifier>
+    </Filter>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="main.cpp">
@@ -29,9 +32,6 @@
     <ClInclude Include="Node.h">
       <Filter>Header Files</Filter>
     </ClInclude>
-    <ClInclude Include="Segment.h">
-      <Filter>Header Files</Filter>
-    </ClInclude>
     <ClInclude Include="TreePrinter.h">
       <Filter>Header Files</Filter>
     </ClInclude>
@@ -43,6 +43,21 @@
     </ClInclude>
     <ClInclude Include="SegmentNode.h">
       <Filter>Header Files</Filter>
+    </ClInclude>
+    <ClInclude Include="AVL-Tree.h">
+      <Filter>Header Files\AVL</Filter>
+    </ClInclude>
+    <ClInclude Include="SegmentTree2D.h">
+      <Filter>Header Files\AVL</Filter>
+    </ClInclude>
+    <ClInclude Include="SegmentTree1D.h">
+      <Filter>Header Files\AVL</Filter>
+    </ClInclude>
+    <ClInclude Include="SegmentNode1D.h">
+      <Filter>Header Files\AVL</Filter>
+    </ClInclude>
+    <ClInclude Include="Segment.h">
+      <Filter>Header Files\AVL</Filter>
     </ClInclude>
   </ItemGroup>
 </Project>
